@@ -1,5 +1,6 @@
 3.2.1 (unreleased)
 ------------------
+Issue-2001: Custom Accreditation Logo not visible (Unauthorized)
 Issue-2010: Bika Listing Table: "Show More" button disappears
 Issue-2012: AR Template Analysis don't get applied if an Analysis Profile is selected
 Issue-2015: Copy AS functionality from the "bika_analysisservices" view raises an error
